[gd_scene load_steps=10 format=2]

[ext_resource path="res://warthog.png" type="Texture" id=1]
[ext_resource path="res://warthog.gd" type="Script" id=2]
[ext_resource path="res://turret.png" type="Texture" id=3]
[ext_resource path="res://turret.gd" type="Script" id=4]
[ext_resource path="res://shotLarge.png" type="Texture" id=5]
[ext_resource path="res://enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://game.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.5, 26 )

[sub_resource type="CircleShape2D" id=2]
radius = 232.009

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 79, 62 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
rotation = 4.71239
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -2.5, 0 )
shape = SubResource( 1 )

[node name="turret" type="Node2D" parent="KinematicBody2D"]
position = Vector2( -33, -1 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D/turret"]
texture = ExtResource( 3 )

[node name="muzzle" type="Position2D" parent="KinematicBody2D/turret"]
position = Vector2( 24, 0 )

[node name="flash" type="Sprite" parent="KinematicBody2D/turret/muzzle"]
visible = false
position = Vector2( 13, 0 )
rotation = 3.14159
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="FiringRate" type="Timer" parent="KinematicBody2D/turret"]
one_shot = true
autostart = true

[node name="range" type="Area2D" parent="KinematicBody2D/turret"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/turret/range"]
shape = SubResource( 2 )

[node name="trash" type="Node2D" parent="."]
visible = false

[node name="bullet_container" type="Node2D" parent="."]

[node name="spawn_container" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="spawn_container"]
position = Vector2( -42, 330 )

[node name="Position2D2" type="Position2D" parent="spawn_container"]
position = Vector2( 500, 640 )

[node name="Position2D3" type="Position2D" parent="spawn_container"]
position = Vector2( 1089, 307 )

[node name="Position2D4" type="Position2D" parent="spawn_container"]
position = Vector2( 502, -43 )

[node name="Position2D5" type="Position2D" parent="spawn_container"]
position = Vector2( -42, 625 )

[node name="Position2D6" type="Position2D" parent="spawn_container"]
position = Vector2( 1019, -55 )

[node name="enemy_container" type="Node2D" parent="."]

[node name="KinematicBody2D2" parent="enemy_container" instance=ExtResource( 6 )]
position = Vector2( 497, 352 )

[node name="spawn_timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="KinematicBody2D/turret/FiringRate" to="KinematicBody2D/turret" method="_on_FiringRate_timeout"]
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
